fixing survey visible content

--- a/rspp/app/assets/stylesheets/survey.scss
+++ b/rspp/app/assets/stylesheets/survey.scss
@@ -26,7 +26,6 @@
         display: none;
         width: 99%;
         padding: 0 !important;
-        margin: 10px auto;
 
         .comments-list {
             max-height: 175px;
